# optionx_cpp

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build-mingw-libs.bat  build-mingw-tests.bat
.github/workflows/: ubuntu-smoke.yml  windows-smoke.yml
agents/: build-and-test.md  coding-style.md  implementation-notes.md  platform-api-guide.md  project-overview.md
browser_extensions/tradingview-alert-extension/: README.md  manifest.json  package-lock.json  package.json  service_worker.js
browser_extensions/tradingview-alert-extension/content_scripts/: private_feed_page_hook.js  tradingview_alerts.js  tradingview_private_feed.js
browser_extensions/tradingview-alert-extension/examples/: README.md  optionx_noisy_test_alertcondition.pine  optionx_noisy_test_lifecycle.pine  optionx_noisy_test_signals.pine
browser_extensions/tradingview-alert-extension/popup/: popup.css  popup.html  popup.js
browser_extensions/tradingview-alert-extension/tests/: integration.test.mjs  parser.test.mjs  popup.test.mjs  private_feed.test.mjs
cmake/: copy_runtime_dlls.cmake
code_blocks/examples/: examples.cbp
examples/: README.md  account_info_hub_example.cpp  bot_binary_bridge_smoke.cpp  bot_binary_command_builder_smoke.cpp  bridge_example_utils.hpp  event_mediator_test.cpp  example_utils.hpp  intrade_bar_api_example.cpp  intrade_market_data_example.cpp  market_data_hub_example.cpp  metatrader_file_bridge_smoke.config.json  metatrader_file_bridge_smoke.cpp  metatrader_file_command_writer_smoke.cpp  metatrader_file_end_to_end_smoke.cpp  named_pipe_bridge_smoke.cpp  protocol_v1_bridge_smoke.config.json  protocol_v1_bridge_smoke.cpp  protocol_v1_named_pipe_bridge_smoke.cpp  task_manager_example.cpp  test_encryption.cpp  test_intrade_bar_http_client.cpp  test_intrade_bar_http_client_module.cpp  test_service_session_db.cpp  test_trade_manager_module.cpp  trade_record_db_example.cpp  trading_condition_hub_example.cpp  tradingview_extension_bridge_smoke.config.json  tradingview_extension_bridge_smoke.cpp
examples/mql/: OptionXFileBridgeSignalExample.mq4  OptionXFileBridgeSignalExample.mq5
guides/: api-and-header-contracts.md  bridge-examples.md  bridge-lifecycle-guide.md  bridge-protocol-v1.md  bridge-protocol-v1.ru.md  bridge-taxonomy.md  build-and-test.md  codebase-orientation.md  coding-agent-workflow.md  coding-style.md  commit-conventions.md  git-workflow.md  implementation-notes.md  platform-api-guide.md  project-overview.md  protocol-v1-bridge-runtime.md  refactor-backlog.md  telegram-bridge-design.md  tradingview-bridge-research.md
guides/bridge-protocol-v1/: dto-mapping-and-decisions.md  dto-mapping-and-decisions.ru.md  envelope-and-transport.md  envelope-and-transport.ru.md  events-reports-and-replay.md  events-reports-and-replay.ru.md  file-transport-and-adapters.md  file-transport-and-adapters.ru.md  market-data.md  market-data.ru.md  overview.md  overview.ru.md  shared-objects.md  shared-objects.ru.md  trading-and-signals.md  trading-and-signals.ru.md
include/optionx_cpp/: bridges.hpp  components.hpp  config.hpp  data.hpp  endpoint.hpp  market_data.hpp  modules.hpp  optionx.hpp  platforms.hpp  storages.hpp  utils.hpp
include/optionx_cpp/bridges/: BaseBridge.hpp  BridgeHost.hpp  IntradeBarLegacyBridge.hpp  LegacyNamedPipeBridge.hpp  LegacyNamedPipeBridgeConfig.hpp  NamedPipe.hpp  TradingView.hpp  bot_binary.hpp  legacy_trading.hpp  metatrader_file.hpp  named_pipe.hpp  protocol_v1.hpp  trading_view.hpp
include/optionx_cpp/components/: AccountInfoHub.hpp  BaseAccountInfoComponent.hpp  BaseAccountInfoHandler.hpp  BaseComponent.hpp  BaseEndpoint.hpp  BaseHttpClientComponent.hpp  BaseTradeExecutionComponent.hpp  BaseTradingConditionHandler.hpp  IAccountInfoSubscriber.hpp  ITradingConditionSubscriber.hpp  TradingConditionHub.hpp
include/optionx_cpp/data/: IEndpointConfig.hpp  account.hpp  accounts.hpp  bars.hpp  bridge.hpp  endpoint.hpp  events.hpp  market.hpp  symbol.hpp  symbols.hpp  ticks.hpp  trading.hpp
include/optionx_cpp/endpoint/: BaseEndpoint.hpp
include/optionx_cpp/market_data/: BaseMarketDataProvider.hpp  IMarketDataSubscriber.hpp  MarketDataBatch.hpp  MarketDataContinuityService.hpp  MarketDataHub.hpp  MarketDataSubscription.hpp  enums.hpp
include/optionx_cpp/utils/: Base36.hpp  (+19 more)
libs/: CMakeLists.txt
libs/cmake/: install-headers.cmake  install-runtime-dlls.cmake  install-static-libs.cmake  libgtest-wrapper.cmake  libmdbx-wrapper.cmake
mql/legacy_trading_connector/: README.md
scripts/: compile-metatrader-mql.ps1  install-metatrader-mql.ps1  test-metaeditor-compile-smoke.ps1  test-metatrader-mql-install.ps1
tests/: account_info_hub_test.cpp  bar_price_source_contract_test.cpp  bot_binary_bridge_test.cpp  bot_binary_protocol_test.cpp  bridge_host_test.cpp  bridge_umbrella_include_test.cpp  header_only_odr_companion.cc  header_only_odr_test.cpp  intrade_auth_lifecycle_test.cpp  intrade_bar_legacy_bridge_test.cpp  intrade_bar_platform_test.cpp  intrade_ping_sweep.cpp  legacy_named_pipe_bridge_test.cpp  legacy_trading_bridge_test.cpp  lifecycle_event_safety_test.cpp  market_data_hub_test.cpp  market_data_subscription_contract_test.cpp  metatrader_file_bridge_test.cpp  metatrader_file_command_writer_test.cpp  metatrader_file_config_include_test.cpp  metatrader_paths_test.cpp  protocol_v1_bridge_test.cpp  service_session_db_test.cpp  signal_record_db_test.cpp  storage_result_test.cpp  trade_id_test.cpp  trade_manager_test.cpp  trade_record_db_test.cpp  trade_record_stats_test.cpp  trade_record_storage_test.cpp  trade_result_query_test.cpp  tradeup_ws_invalid_token_probe.cpp  trading_condition_hub_test.cpp  tradingview_extension_protocol_test.cpp  utils_core_test.cpp  utils_task_manager_test.cpp
tests/cmake/submodule_consumer/: CMakeLists.txt  main.cc
tests/common/: SmokeTestUtils.hpp
tests/intrade_bar_api/: CLI.md  IntradeBarSmokeSupport.hpp  IntradeBarSmokeUtils.hpp  README.md  WORKFLOWS.md  intrade_bar_api.env.example  intrade_bar_api_response_test.cpp  intrade_bar_auth_smoke_test.cpp  intrade_bar_smoke_cli.cpp
(+279 files in other folders)
